--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <!DOCTYPE html>
 
-<h1>Hello there!</h1>
+<html>
+	<body>
+		<h1>Hello World</h1>
+			<p>I'm hosted with GitHub Pages.</p>
+	</body>
+</html>
