--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 	<body>
 		<h1>Hello World</h1>
 			<p>I'm hosted with GitHub Pages.</p>
+
+		<A HREF="boilerplate-project-timestamp/views/index.html"Links to projects></A>
 	</body>
 </html>
