--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<h1>Hello World</h1>
 			<p>I'm hosted with GitHub Pages.</p>
 
-		<A HREF="boilerplate-project-timestamp/views/index.html"Links to projects></A>
+		<a HREF="boilerplate-project-timestamp/views/index.html">Links to projects</a>
 	</body>
 </html>
